--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,7 +26,7 @@
 <% end %>
 
 <% unless @user.id == current_user.id %>
-  <% if @isRoom == true %>あああああああああああ
+  <% if @isRoom == true %>
     <%= link_to "チャットへGo!", chat_path %>
   <% else %>
     <%= form_for @room do |f| %>
