--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -4,6 +4,7 @@
 <p>メールアドレス : <%= current_user.email %></p>
 <p>性別 : <%= current_user.sex_text %></p>
 <p>生年月日 : <%= current_user.birthday %></p>
+<p>都道府県 :<%= @user.prefecture.name %></p>
 
 <p>自己紹介</p>
 <p><%= @user.introduce %></p>
