--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -28,6 +28,9 @@
     <%= f.label "趣味" %><br />
     <%= f.text_field :hobby, autofocus: true %><br />
 
+    <%= f.label "好きなタイプ" %><br />
+    <%= f.text_field :LikeType, autofocus: true %><br />
+
     <p>自己紹介(255文字未満)</p>
     <p><%= f.text_area :introduce, :maxlength => "255" %></p><br />
 
