--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -4,9 +4,11 @@
 <p>メールアドレス : <%= current_user.email %></p>
 <p>性別 : <%= current_user.sex_text %></p>
 <p>生年月日 : <%= current_user.birthday %></p>
+<p>年齢 : <%= @age %></p>
 <p>都道府県 :<%= @user.prefecture.name %></p>
 <p>市町村 :<%= current_user.city %></p>
 <p>趣味 :<%= current_user.hobby %></p>
+<p>好きなタイプ :<%= current_user.LikeType %></p>
 
 
 <p>自己紹介</p>
