--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,7 @@
 <p>名前 : <%= @user.name %></p>
 <p>メールアドレス : <%= @user.email %></p>
 <p>性別 : <%= @user.sex_text %></p>
+<p>年齢 : <%= @age %></p>
 <p>自己紹介</p>
 <p><%= @user.introduce %></p>
 </br>
